Update footer text in index.html

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
   </div>
 
   <footer>
-    © 2025 Diario Regional · Simulación educativa de diseño periodístico
+    © 2025 Las Provincias · El Mercantil Valenciano
   </footer>
 
 </body>
