Update title and header in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Diario Regional | Actualidad de la Comunidad</title>
+  <title>Las Privincias | Actualidad de la Comunidad</title>
   <style>
     body {
       font-family: Georgia, 'Times New Roman', serif;
@@ -82,7 +82,7 @@
 <body>
 
   <header>
-    <h1>Las Provincias</h1>
+    <h1>Diario Regional</h1>
     <p>Información de proximidad · Comunidad Valenciana</p>
   </header>
 
@@ -99,7 +99,7 @@
 
   <div class="container">
     <div class="disclaimer">
-      Nota: última hora, noticia en actualización
+      Nota: Esta noticia se presenta de forma genérica y descriptiva, sin identificar a personas ni centros concretos.
     </div>
 
     <h2 class="headline">Investigan una posible intoxicación alimentaria tras una fiesta navideña en una escuela de idiomas</h2>
@@ -127,3 +127,4 @@
 
 </body>
 </html>
+
