Fix typo in title and add image to article

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Las Privincias | Actualidad de la Comunidad</title>
+  <title>Las Provincias | Actualidad de la Comunidad</title>
   <style>
     body {
       font-family: Georgia, 'Times New Roman', serif;
@@ -104,6 +104,7 @@
 
     <h2 class="headline">Investigan una posible intoxicación alimentaria tras una fiesta navideña en una escuela de idiomas</h2>
     <h3 class="subheadline">Varios asistentes presentaron síntomas leves después de compartir comida elaborada por el alumnado</h3>
+    <img src="https://via.placeholder.com/900x500?text=Croquetas" alt="Imagen de croquetas" style="width:100%;height:auto;margin:20px 0;border-radius:8px;" />
     <div class="meta">Redacción | Valencia · Hoy</div>
 
     <article>
@@ -122,9 +123,10 @@
   </div>
 
   <footer>
-    © 2025 Las Provincias · El Mercantil Valenciano
+    © 2025 Las Provincias · El Mercantil Valenciano 
   </footer>
 
 </body>
 </html>
+
 
