Revise disclaimer for ongoing updates
Updated disclaimer text to indicate ongoing updates.

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
   <div class="container">
     <div class="disclaimer">
-      Nota: Esta noticia se presenta de forma genérica y descriptiva, sin identificar a personas ni centros concretos.
+      Nota: Esta en actualización contínua.
     </div>
 
     <h2 class="headline">Investigan una posible intoxicación alimentaria tras una fiesta navideña en una escuela de idiomas</h2>
