Update header title and image source in index.html

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <body>
 
   <header>
-    <h1>Diario Regional</h1>
+    <h1>Las Provinciasl</h1>
     <p>Información de proximidad · Comunidad Valenciana</p>
   </header>
 
@@ -104,7 +104,7 @@
 
     <h2 class="headline">Investigan una posible intoxicación alimentaria tras una fiesta navideña en una escuela de idiomas</h2>
     <h3 class="subheadline">Varios asistentes presentaron síntomas leves después de compartir comida elaborada por el alumnado</h3>
-    <img src="https://via.placeholder.com/900x500?text=Croquetas" alt="Imagen de croquetas" style="width:100%;height:auto;margin:20px 0;border-radius:8px;" />
+    <img src="https://www.freepik.es/foto-gratis/cuenco-croquetas-servilleta-fondo-desactivado_25066905.htm#fromView=keyword&page=1&position=1&uuid=d4971531-f792-4fd0-bf26-baeb31966844&query=Croquetas" alt="Imagen de croquetas" style="width:100%;height:auto;margin:20px 0;border-radius:8px;" />
     <div class="meta">Redacción | Valencia · Hoy</div>
 
     <article>
