--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <body>
 
   <header>
-    <h1>Las Provinciasl</h1>
+    <h1>Diario Regional</h1>
     <p>Información de proximidad · Comunidad Valenciana</p>
   </header>
 
@@ -99,12 +99,15 @@
 
   <div class="container">
     <div class="disclaimer">
-      Nota: Esta en actualización contínua.
+      Nota: Esta noticia se encuentra en permanente actualización.
     </div>
 
     <h2 class="headline">Investigan una posible intoxicación alimentaria tras una fiesta navideña en una escuela de idiomas</h2>
     <h3 class="subheadline">Varios asistentes presentaron síntomas leves después de compartir comida elaborada por el alumnado</h3>
-    <img src="https://www.freepik.es/foto-gratis/cuenco-croquetas-servilleta-fondo-desactivado_25066905.htm#fromView=keyword&page=1&position=1&uuid=d4971531-f792-4fd0-bf26-baeb31966844&query=Croquetas" alt="Imagen de croquetas" style="width:100%;height:auto;margin:20px 0;border-radius:8px;" />
+    <figure style="margin:20px 0;">
+      <img src="croquetas.jpg" alt="Croquetas servidas en un cuenco" style="width:100%;height:auto;border-radius:8px;" />
+      <figcaption style="font-size:14px;color:#666;margin-top:6px;">Imagen de archivo: croquetas compartidas durante celebraciones gastronómicas.</figcaption>
+    </figure>
     <div class="meta">Redacción | Valencia · Hoy</div>
 
     <article>
@@ -123,10 +126,11 @@
   </div>
 
   <footer>
-    © 2025 Las Provincias · El Mercantil Valenciano 
+    © 2025 Las provincias · EL Mercantil Valenciano
   </footer>
 
 </body>
 </html>
+
 
 
