--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <body>
 
   <header>
-    <h1>Diario Regional</h1>
+    <h1>Las Provincias</h1>
     <p>Información de proximidad · Comunidad Valenciana</p>
   </header>
 
